bfs/dump.txt
g++ -c -g -std=c++11 -O3 graph.cpp -o  graph.o
graph.cpp: In member function ‘bool CSR::bfs(const long int&)’:
graph.cpp:271:39: error: capture of non-variable ‘CSR::rpao’ 
             auto traverse = [&depth, &rpao, &ciao, level](const std::vector<long> &frontier){
                                       ^
In file included from graph.cpp:1:0:
graph.h:58:27: note: ‘std::vector<long int> CSR::rpao’ declared here
         std::vector<long> rpao;    // row pointer array based on outgoing vertices
                           ^
graph.cpp:271:46: error: capture of non-variable ‘CSR::ciao’ 
             auto traverse = [&depth, &rpao, &ciao, level](const std::vector<long> &frontier){
                                              ^
In file included from graph.cpp:1:0:
graph.h:59:27: note: ‘std::vector<long int> CSR::ciao’ declared here
         std::vector<long> ciao;    // column index array based on outgoing vertices
                           ^
graph.cpp: In lambda function:
graph.cpp:273:37: error: ‘this’ was not captured for this lambda function
                     for(long cidx = rpao[vidx]; cidx < rapo[vidx+1]; cidx++){
                                     ^
graph.cpp:273:37: error: invalid use of non-static data member ‘CSR::rpao’
In file included from graph.cpp:1:0:
graph.h:58:27: note: declared here
         std::vector<long> rpao;    // row pointer array based on outgoing vertices
                           ^
graph.cpp:273:56: error: ‘rapo’ was not declared in this scope
                     for(long cidx = rpao[vidx]; cidx < rapo[vidx+1]; cidx++){
                                                        ^
graph.cpp:274:40: error: ‘this’ was not captured for this lambda function
                         long out_ngb = ciao[cidx];
                                        ^
graph.cpp:274:40: error: invalid use of non-static data member ‘CSR::ciao’
In file included from graph.cpp:1:0:
graph.h:59:27: note: declared here
         std::vector<long> ciao;    // column index array based on outgoing vertices
                           ^
graph.cpp: In lambda function:
graph.cpp:290:37: error: ‘rapi’ was not declared in this scope
                     for(long cidx = rapi[vidx]; cidx < rapi[vidx+1]; cidx++){
                                     ^
graph.cpp:293:45: error: ‘level’ is not captured
                             depth[in_ngb] = level;
                                             ^
graph.cpp:288:42: note: the lambda has no capture-default
             auto traverse = [&depth, this](const std::vector<long> &frontier){
                                          ^
graph.cpp:203:9: note: ‘int level’ declared here
     int level = 0;
         ^
Makefile:16: recipe for target 'graph.o' failed
make: *** [graph.o] Error 1
